@@ -1,3 +1,6 @@
+2006-02-20 backend_gtk.py FigureCanvasGTK.draw(): fix bug reported by
+           David Tremouilles - SC
+
 2006-02-20 Remove the "pygtk.require('2.4')" error from
            examples/embedding_in_gtk2.py - SC
 
